cabal-version:       2.4

name:                parser
version:             0.1.0.0
synopsis:            Breadth-first parser combinators
homepage:            https://github.com/glguy/breadth-first-parser-combinators
bug-reports:         https://github.com/glguy/breadth-first-parser-combinators/issues
license:             ISC
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@galois.com
copyright:           Eric Mertens
category:            Parsing
build-type:          Custom
extra-source-files:  CHANGELOG.md

description:
  Breadth-first parser combinators designed to release input
  tokens as early as possible. All parser state is represented
  as a data type that is advanced for each character processed.
  .
  * "Parser" provides the high-level interface to building parsers.
  * "Parser.Combinators" provides combinators for common parsing patterns.
  * "Parser.Function" provides the most common way to get individual tokens.
  .
  Internals of the parser state are available in "Parser.State". This can
  be useful when developing new primitive operations on the parser state.
  .
  "Parser.Delay", "Parser.Single" and "Parser.Chars" serve as examples
  of ways to parse with primitives beyond functions.

source-repository head
  type: git
  branch: master
  location: git@github.com:glguy/breadth-first-parser-combinators

custom-setup
  setup-depends:
    base >= 4 && <5,
    Cabal,
    cabal-doctest >= 1 && <1.1

library
  hs-source-dirs:      src
  default-language:    Haskell2010

  build-depends:
    base >=4.12 && <4.14,

  exposed-modules:
    Parser
    Parser.Chars
    Parser.Combinators
    Parser.Delay
    Parser.Function
    Parser.Single
    Parser.State


test-suite unit-tests
  main-is:             Test.hs
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  default-language:    Haskell2010

  build-depends:
    base,
    parser,
    tasty       ^>= 1.2.3,
    tasty-hunit ^>= 0.10.0,
    tasty-th    ^>= 0.1.7,

test-suite lazy-check
  main-is:             Lazy.hs
  type:                exitcode-stdio-1.0
  ghc-options:         -rtsopts=all -with-rtsopts=-M50M
  hs-source-dirs:      test
  default-language:    Haskell2010

  build-depends:
    base,
    parser,

test-suite doctests
  main-is:             doctest.hs
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded
  hs-source-dirs:      test
  default-language:    Haskell2010

  other-modules:
    Build_doctests

  autogen-modules:
    Build_doctests

  build-depends:
    base,
    base-compat,
    doctest ^>= 0.16,

test-suite token-demo
  main-is:             TokenDemo.hs
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  default-language:    Haskell2010

  build-depends:
    base,
    parser,
    tasty-hunit ^>= 0.10.0,
    tasty-th    ^>= 0.1.7,
